--- a/package.json
+++ b/package.json
@@ -15,5 +15,18 @@
   "bugs": {
     "url": "https://github.com/SiddharthaPradhan/final_project/issues"
   },
-  "homepage": "https://github.com/SiddharthaPradhan/final_project#readme"
+  "homepage": "https://github.com/SiddharthaPradhan/final_project#readme",
+  "dependencies": {
+    "body-parser": "^1.20.1",
+    "connect-ensure-login": "^0.1.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "mongodb": "^4.10.0",
+    "mongoose": "^6.6.5",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2"
+  }
 }
