--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,17 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "http-errors": "~1.6.3"
+    "http-errors": "~1.6.3",
+    "body-parser": "^1.20.1",
+    "connect-ensure-login": "^0.1.1",
+    "dotenv": "^16.0.3",
+    "express-session": "^1.17.3",
+    "mongodb": "^4.10.0",
+    "mongoose": "^6.6.5",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2"
   }
   
 }
