--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 MONGO_USER="bigboys"
 MONGO_PASS="bigboys123"
 MONGO_HOST="cluster0.jxdzjip.mongodb.net"
+CLIENT_ID="e84e03b7d9288ff16203"
+CLIENT_SECRET="13fabb2ba08b54129bbf694724ae242cbf894a3a"
+SESSION_SECRET="m=*BPNuazt..yw=[cWp>q**L|P@GMPEEPEEPOOPOO"
