--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^7.1.2"
+    "passport-local-mongoose": "^7.1.2",
+    "passport-oauth2": "^1.6.1"
   }
 }
