--- a/package.json
+++ b/package.json
@@ -1,32 +1,26 @@
 {
-  "name": "final_project",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.latest.js",
+  "name": "server",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./server/server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/SiddharthaPradhan/final_project.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/SiddharthaPradhan/final_project/issues"
-  },
-  "homepage": "https://github.com/SiddharthaPradhan/final_project#readme",
   "dependencies": {
     "body-parser": "^1.20.1",
     "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "debug": "~2.6.9",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "express": "~4.16.1",
     "express-session": "^1.17.3",
+    "http-errors": "~1.6.3",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.5",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^7.1.2"
+    "passport-local-mongoose": "^7.1.2",
+    "passport-oauth2": "^1.6.1"
   }
 }
