--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "start": "node ./server/server.js"
   },
+  "engines": {
+    "npm": ">=7.0.0 <9.0.0",
+    "node": ">=16.0.0 <17.0.0"
+  },
   "dependencies": {
     "body-parser": "^1.20.1",
     "connect-ensure-login": "^0.1.1",
