--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "engines": {
     "npm": ">=7.0.0 <9.0.0",
-    "node": ">=16.0.0 <17.0.0"
+    "node": "18.x"
   },
   "dependencies": {
     "body-parser": "^1.20.1",
